# shellmates

./: .gitignore  README.md  TESTING.md  pyproject.toml  setup.py
scripts/: deploy.sh
src/shellmates/: main.py
src/shellmates/textual/: app.py  app.tcss
src/shellmates/textual/widgets/: ChatBox.py
tests/: __init__.py
tests/textual/: __init__.py  test_app.py
tests/textual/widgets/: __init__.py  test_chatbox.py
