[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shellmates"
version = "0.1.5"
description = "A terminal based gaming hub."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.11.0",
    "setuptools>=80.9.0",
    "textual>=6.5.0",
    "twine>=6.2.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
shellmates = "shellmates.main:main"
shm8 = "shellmates.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
]
